# remip-example

./: .coverage  .gitignore  README.md  async_blog.md  gemini_commit_message.txt  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.specify/templates/: plan-template.md
.streamlit/: config.toml  config.toml.bk
examples/ja/: 02.teacher.md  03.library.md  07.nurse.md  08.coupon.md  09.bedcontrol.md  10.routing.md  coupon.md  lessons.md  library.md  luggage.md  nurse.md  picking.md  routing.md  sales.md
specs/001-when-i-input/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/003-i-update-the/: spec.md
specs/004-runner-run-async/: spec.md
specs/005-implement-a-queue/: plan.md  spec.md
specs/006-i-want-to/: spec.md
specs/007-add-precommit-and/: spec.md
specs/008-generate-readme-md/: plan.md  spec.md
specs/009-refactor-the-codes/: plan.md  spec.md
specs/011-i-want-to/: plan.md  spec.md
specs/012-the-current-implementation/: plan.md  spec.md
src/remip_example/: __init__.py  agent.py  app.py  app2.py  chat_history.py  config.py  launch_streamlit_cloud.py  services.py  ui_components.py  utils.py
src/remip_example/examples/ja/: 01.lessons.md  02.teacher.md  04.sales.md  05.luggage.md  06.picking.md  07.nurse.md  09.bedcontrol.md
src/remip_sample/: app.py  config.py  utils.py
tests/: test_agent.py  test_app.py  test_app2_utils.py  test_app_resumability.py  test_chat_history.py  test_services.py  test_services_concurrency.py  test_services_talk_session.py  test_ui_components.py
