[project]
name = "remip-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ohtaman", email = "ohtamans@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.13.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "nest-asyncio>=1.6.0",
    "google-adk>=1.14.1",
    "anyio>=4.4.0",
]

[project.scripts]
remip-sample = "remip_sample:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
