[project]
name = "remip-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ohtaman", email = "ohtamans@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.13.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "nest-asyncio>=1.6.0",
    "google-adk>=1.21.0",
    "anyio>=4.4.0",
    "aiosqlite>=0.21.0",
    "streamlit-autorefresh>=1.0.1",
]

[project.scripts]
remip-example = "remip_example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]
